--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Each item listed in this file will be ignored by git
 # and will not be uploaded to github. The blank lines
 # and comments are unnecessary, but included for 
-# clarification.
+# clarification
 
 # node_modules is a storage folder for Node and
 # can get very large.
